manifests/ns-rabbit/recipes/backup.yaml
# 테스트용...
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backup-tester
  namespace: rabbit
spec:
  selector:
    matchLabels:
      app: backup
  replicas: 1
  template:
    metadata:
      labels:
        app: backup
    spec:
      imagePullSecrets:
        - name: github-andromedarabbit
      securityContext:
        fsGroup: 999
      containers:
        - name: backup-tester
          image: docker.pkg.github.com/unchartedsky/macgyver/macgyver:latest
          imagePullPolicy: IfNotPresent
          command: ["/bin/bash", "-c", "--"]
          args: ["while true; do sleep 30; done;"]
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            requests:
              cpu: 30m
              memory: 16Mi
            limits:
              cpu: 400m
              memory: 512Mi
          volumeMounts:
            - name: scripts-d
              mountPath: /scripts
      volumes:
        - name: scripts-d
          projected:
            defaultMode: 0550
            sources:
              - configMap:
                  name: backup-scripts
                  items:
                    - key: run.sh
                      path: run.sh
